manifest/k8s/service-template.yml
apiVersion: v1
kind: Service
metadata:
    namespace: $K8S_NAMESPACE
    name: $BITBUCKET_REPO_SLUG
spec:
    selector:
        app: $BITBUCKET_REPO_SLUG
    ports:
        - port: 80 # é o valor padrão do que eu quero receber no ingress. se deixar 80 não precisa especificar no navegador. (recomendo deixar padrão)
          protocol: TCP
          targetPort: 4010
          name: app
