manifest/k8s/ingress-template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: $BITBUCKET_REPO_SLUG
    labels:
        app: $BITBUCKET_REPO_SLUG
    namespace: $K8S_NAMESPACE
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
    ingressClassName: nginx
    rules:
        - host: $K8S_APP_URL
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: $BITBUCKET_REPO_SLUG
                            port:
                                number: 80 # port dita no service
